# stoner-player

./: .gitignore  CMakeLists.txt  README.md  build.pl
doc/design/: app_icon.xcf
include/: app.hpp  app_version.hpp  config_definitions.hpp  types.hpp  utils_filesystem.hpp  utils_include.hpp  utils_string.hpp
include/audio/: audio.hpp
include/pixmaps/: add_16x16.xpm  audio_recorder_16x16.xpm  clear_16x16.xpm  close_16x16.xpm  delete_16x16.xpm  error_16x16.xpm  file_audio_16x16.xpm  file_new_16x16.xpm  folder_16x16.xpm  info_16x16.xpm  pause_16x16.xpm  pause_hover_16x16.xpm  play_16x16.xpm  play_hover_16x16.xpm  record_16x16.xpm  record_hover_16x16.xpm  refresh_16x16.xpm  save_16x16.xpm  save_hover_16x16.xpm  stop_16x16.xpm  stop_hover_16x16.xpm  warning_16x16.xpm
include/ui/: dlg_main.hpp  gui.hpp  gui_controls.hpp  gui_lib.hpp  panel_audio.hpp  panel_audio_player.hpp  panel_audio_recorder.hpp  utils_audio_plot.hpp
src/: CMakeLists.txt  app.cpp  app.rc
src/audio/: audio.cpp
src/ui/: dlg_main.cpp  gui.cpp  panel_audio.cpp  panel_audio_player.cpp  panel_audio_recorder.cpp  utils_audio_plot.cpp
third/: CMakeLists.txt
third/hash/: CMakeLists.txt
third/hash/include/: utils_hash.hpp
third/hash/src/: utils_hash.cpp
third/libsndfile/: CMakeLists.txt
third/portaudio/: CMakeLists.txt
third/portaudio/src/hostapi/oss/: low_latency_tip.txt
third/wxWidgets/: README.md
